<resources>
    <string name="app_name">Download App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Files Downloader</string>
    <string name="notification_description">Your files are downloading</string>
    <string name="notification_button">Check Status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_button">Action Button</string>
    <string name="file_name">File Name :</string>
    <string name="status">Status :</string>

    <string name="download_file_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="error_invalid_download_url">Invalid download URL, please provide the correct download URL</string>
    <string name="error_none_selected">Please provide a custom URL, or select from the predefined ones</string>

    <string name="download_file_load_app">Current Project Repository by Udacity</string>
    <string name="download_file_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="url_to_download_file">URL</string>
    <string name="channel_name">File Downloader Status Channel</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading Please Wait…</string>
    <string name="downloadingNotification">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="background_image_description">BackgroundImage</string>
    <string name="download_theme_image">Download Theme Image</string>
    <string name="open_downloads">Open Downloads</string>
</resources>
