<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_spacing"
        android:background="#F8F9FA"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".screens.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image_description"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/home_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/url_to_download_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_download"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/files_download_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            app:layout_constraintTop_toBottomOf="@+id/editTextLayout">

            <RadioButton
                android:id="@+id/glide_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@string/download_file_glide" />

            <RadioButton
                android:id="@+id/current_repo_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@string/download_file_load_app" />

            <RadioButton
                android:id="@+id/retrofit_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@string/download_file_retrofit" />

        </RadioGroup>

        <com.udacity.custom_views.button.WaveView
            android:id="@+id/wave_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:idleText="@string/download"
            app:idleTextColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:loadedText="@string/downloaded"
            app:loadingBackgroundColor="@color/wave"
            app:loadingText="@string/downloading"
            app:loadingTextColor="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>